samples/_failures_safe/1761500722_78c362_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4cd63c38.c: In function ‘main’:
./samples/SAFE/__tmp_4cd63c38.c:132:5: error: expected declaration or statement at end of input
  132 |     addEdge(graph, 0, 1, 2);
      |     ^~~~~~~
